# consult-parcels-sigef

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build-and-release.yml  build.yml  publish.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_operations.rs
src-tauri/src/services/: consult_parcels_services.rs  cookies_services.rs
src/components/: index.ts
src/components/button/: index.tsx  styles.module.css
src/components/text-field/: index.tsx  styles.module.css
src/components/upload-field/: index.tsx
src/components/upload-file/: index.tsx  styles.module.css
src/pages/: index.ts
src/pages/cookies-page/: index.tsx  styles.module.css
src/pages/home-page/: index.tsx  styles.module.css
src/pages/parcels-page/: index.tsx  styles.module.css
src/styles/: global.css
