[package]
name = "consult-parcels-sigef"
version = "0.1.2"
description = "Consultar Parcelas SIGEF"
authors = ["Marcos Campos"]
edition = "2021"

[lib]
name = "consult_parcels_sigef_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
html-escape = "0.2.13"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
